iptables
# Generated by iptables-save v1.4.21 on Sun Sep  3 22:38:51 2017
*filter
:INPUT ACCEPT [748:454210]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1617:757840]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
-A INPUT -s 109.150.18.245/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 173.45.127.124/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 173.45.127.125/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 10.20.0.0/16 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 172.30.0.0/16 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 10.254.0.0/16 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8080 -j DROP
-A INPUT -s 109.150.18.245/32 -p tcp -m multiport --dports 6443,2379,5000,10251,10252 -j ACCEPT
-A INPUT -s 173.45.127.124/32 -p tcp -m multiport --dports 6443,2379,5000,10251,10252 -j ACCEPT
-A INPUT -s 173.45.127.125/32 -p tcp -m multiport --dports 6443,2379,5000,10251,10252 -j ACCEPT
-A INPUT -s 10.20.0.0/16 -p tcp -m multiport --dports 6443,2379,5000,10251,10252 -j ACCEPT
-A INPUT -s 172.30.0.0/16 -p tcp -m multiport --dports 6443,2379,5000,10251,10252 -j ACCEPT
-A INPUT -s 10.254.0.0/16 -p tcp -m multiport --dports 6443,2379,5000,10251,10252 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m multiport --dports 6443,2379,5000,10251,10252 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 6443,2379,5000,10251,10252 -j DROP
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER -d 172.30.23.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 5000 -j ACCEPT
-A DOCKER-ISOLATION -j RETURN
COMMIT
# Completed on Sun Sep  3 22:38:51 2017
# Generated by iptables-save v1.4.21 on Sun Sep  3 22:38:51 2017
*nat
:PREROUTING ACCEPT [6:548]
:INPUT ACCEPT [6:548]
:OUTPUT ACCEPT [177:39038]
:POSTROUTING ACCEPT [177:39038]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.30.23.0/24 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.30.23.2/32 -d 172.30.23.2/32 -p tcp -m tcp --dport 5000 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 5000 -j DNAT --to-destination 172.30.23.2:5000
COMMIT
# Completed on Sun Sep  3 22:38:51 2017
